--- a/src/frontend/templates/query.html
+++ b/src/frontend/templates/query.html
@@ -13,7 +13,7 @@
         <label for="query_file">Upload Query File:</label>
         <input type="file" name="query_file" id="query_file" accept=".jpg,.jpeg,.png,.wav,.midi,.mp3">
         <br>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn">Submit</button>
     </form>
 </section>
 {% endblock %}
